<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/loginLabel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="160dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/login_name"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_light"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="96dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="52dp"
        android:hint="@string/userName_hint"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLabel" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="96dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="24dp"
        android:hint="@string/password_hint"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameField" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="76dp"
        android:text="@string/submit_button_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />

</android.support.constraint.ConstraintLayout>